[package]
name = "tester"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
actix = "0.13.5"
env_logger = "0.11.5"
log = "0.4.22"
goose = "0.17.2"
tokio = "1.39.2"
serde = "1.0.204"
uuid = "1.10.0"
async-tempfile = { version = "0.6.0", features = ["uuid"] }
serde_json = "1.0.121"
futures-util = "0.3.30"
futures = "0.3.30"
bytes = "1.6.1"